[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed==0.8.0",
    "gradio==6.14.0",
    "ipykernel==7.2.0",
    "langchain-huggingface==1.2.2",
    "langchain-ollama==1.1.0",
    "langchain-qdrant==1.1.0",
    "langchain-text-splitters==1.1.2",
    "langfuse==4.6.1",
    "langgraph==1.2.0",
    "openai==1.55.0",
    "pymupdf==1.27.2.3",
    "pymupdf4llm==1.27.2.3",
    "python-dotenv==1.2.2",
    "sentence-transformers==5.5.0",
    "tiktoken==0.13.0",
    "tqdm==4.67.1",
]
